0.83.10
  - Cursor blinking rate for TrueType font (TTF) output
    can now be customized with the ttf.blinkc option.
    Set an integer between 1 (fastest) and 7 (slowest)
    to change TTF cursor blinking rate, or setting it to
    0 for no cursor (or false for non-blinking cursor as
    in previous versions), with the default value being
    6 on PC-98 systems and 4 elsewhere. (Wengier)
  - Fixed parallel port emulation to allow MDA port 3BCh
    to work properly.
  - Enhanced the printer function on Windows platforms
    to allow printer names to be specified in [printer]
    section via the "device" option for direct printing
    to the selected device. If left empty, then Windows
    Print dialog will always be shown, or specifying "-"
    will cause it to show only once (unless the user
    clicks "Cancel"). Under "Help" menu there is now a
    menu option "List Printer Devices" to list printer
    devices on Windows, and the parallel port LPT1 now
    defaults to the printer on all platforms. (Wengier)
  - The dynamic_x86 CPU core can now handle page faults
    non-recursively, so you can now run the dynamic_x86
    core with Windows 9x/ME without crashes, although
    this may slightly decrease the performance, and it
    may be disabled by setting the config option "use
    dynamic core with paging on" in [cpu] section to
    "false"; the default value of this option has been
    changed to "auto" which will enable/disable itself
    based on whether the 386 paging and a guest system
    has been enabled. Also fixed incorrect behavior for
    handling trap flags in the dynamic core and updated
    the MMX code for improved performance. (koolkdev)
  - Added support for Direct3D output on Windows SDL2
    builds just like Windows SDL1 builds to become the
    default output in all Windows builds. (Wengier)
  - DOSBox-X now natively supports the pixel-perfect
    scaling! Set the option "output=openglpp" in [sdl]