@@ -1,4 +1,7 @@
 0.83.10
+  - The Window key(s) in Windows and the Command key(s)
+    in macOS will be displayed as "Windows" & "Command"
+    keys instead of "super" & "meta" keys. (Wengier)
   - Cursor blinking rate for TrueType font (TTF) output
     can now be customized with the ttf.blinkc option.
     Set an integer between 1 (fastest) and 7 (slowest)
